--- a/index.html
+++ b/index.html
@@ -33,8 +33,13 @@
         </header>
 
         <!-- Hero -->
-        <section>
-
+        <section class="hero">
+            <div>
+                <img src="./assets/images/pic-of-me.jpg" alt="me being so cool" />
+            </div>
+            <div class="cool-text">
+                <h2>Cool subtitle here!</h2>
+            </div>
         </section>
 
         <!-- about me -->
