about me section styled

--- a/index.html
+++ b/index.html
@@ -43,13 +43,26 @@
         </section>
 
         <!-- about me -->
-        <section>
-
+        <section id="about-me">
+            <div class="about-me">
+                <h3>About Me</h3>
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ipsam asperiores sint, aliquam unde excepturi facere ex inventore omnis nulla odio nisi nemo, sed ullam, voluptates explicabo alias vero quis! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum, distinctio ullam aut debitis eius accusamus. Fuga cumque similique, sit maxime iure quaerat dolorum possimus asperiores veniam. Sed animi reiciendis voluptatibus.</p>
+                    <br />
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, totam nostrum id laborum in cupiditate deserunt incidunt minus aperiam eius quidem odio temporibus nemo repellat molestiae, quo corrupti, velit ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, aliquam eveniet ipsa ab, libero debitis consectetur praesentium exercitationem a corrupti velit eum, cupiditate nisi animi dolorum? Dolore earum fugiat facilis!</p>
+                    <br />
+                </div>
+            </div>
         </section>
 
         <!-- work -->
-        <section>
+        <section id="work">
+            <h3>Work</h3>
+        </section>
 
+        <!-- contacts -->
+        <section id="contact-me">
+            
         </section>
 
     </body>
