work section probably finished and linked

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <!-- nav -->
         <header>
-            <h1>Lernantino</h1>
+            <h1>Peter Beetz</h1>
 
             <nav>
                 <ul>
@@ -45,8 +45,8 @@
         <!-- about me -->
         <section id="about-me">
             <div class="about-me">
-                <h3>About Me</h3>
-                <div>
+                <h3 class="section-head">About Me</h3>
+                <div class="section-border">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ipsam asperiores sint, aliquam unde excepturi facere ex inventore omnis nulla odio nisi nemo, sed ullam, voluptates explicabo alias vero quis! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum, distinctio ullam aut debitis eius accusamus. Fuga cumque similique, sit maxime iure quaerat dolorum possimus asperiores veniam. Sed animi reiciendis voluptatibus.</p>
                     <br />
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, totam nostrum id laborum in cupiditate deserunt incidunt minus aperiam eius quidem odio temporibus nemo repellat molestiae, quo corrupti, velit ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, aliquam eveniet ipsa ab, libero debitis consectetur praesentium exercitationem a corrupti velit eum, cupiditate nisi animi dolorum? Dolore earum fugiat facilis!</p>
@@ -56,13 +56,63 @@
         </section>
 
         <!-- work -->
-        <section id="work">
-            <h3>Work</h3>
+        <section id="work" >
+            <div class="work">
+                <h3 class="section-head">Work</h3>
+                <div class="work-grid-wrapper section-border">
+                    <div class="work-grid-container">
+                        <div class="work-grid-item work-1" > 
+                            <a href="https://youtu.be/6Gha9xrM10w">
+                                <img src="./assets/images/work1.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="work-grid-item work-2">
+                            <a href="https://beatypete.github.io/run-buddy/">
+                                <img src="./assets/images/work2.png" alt="">
+                            </a>
+                        </div>
+                        <div class="work-grid-item work-3">
+                            <a href="https://youtu.be/JDS4cQFPwoQ">
+                                <img src="./assets/images/work3.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="work-grid-item work-4">
+                            <a href="https://thiscatdoesnotexist.com/">
+                                <img src="./assets/images/work4.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="work-grid-item work-5">
+                            <a href="https://youtu.be/wPAu2jxqSBE">
+                                <img src="./assets/images/work5.jpg" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!-- contacts -->
         <section id="contact-me">
-            
+            <div class="contact-me">
+                <h3 class="section-head">Contact Me</h3>
+                <ul>
+                    <li>
+                        555-555-5555
+                    </li>
+                    <li>
+                        <a href="https://kingofooo.tumblr.com/">totallymywebsite.com</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/BeatyPete">GitHub</a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/?lang=en">Twitter</a>
+                    </li>
+                    <li>
+                        <a href="https://www.spotify.com/us/">Spoofy</a>
+                    </li>
+                </ul>
+            </div>
         </section>
 
     </body>
