contact as good as im willing to make it

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
         <section id="contact-me">
             <div class="contact-me">
                 <h3 class="section-head">Contact Me</h3>
-                <ul>
+                <ul class="section-border">
                     <li>
-                        555-555-5555
+                        <a>555-555-5555</a>
                     </li>
                     <li>
                         <a href="https://kingofooo.tumblr.com/">totallymywebsite.com</a>
