--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a href="#contact-me">Contact Me</a>
                     </li>
                     <li>
-                        <a href="#resume">Resume</a>
+                        <a href="https://thispersondoesnotexist.com/">Resume</a>
                     </li>
                 </ul>
             </nav>
