added movie-hub to project lists

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                 <div class="work-grid-wrapper section-border">
                     <div class="work-grid-container">
                         <div class="work-grid-item work-1" > 
-                            <a href="https://youtu.be/6Gha9xrM10w">
-                                <img src="./assets/images/work1.jpg" alt="">
+                            <a href="https://clintonstrange.github.io/movie-hub/index.html" target="_blank">
+                                <img src="./assets/images/moviehub-demo-img.png" alt="">
                             </a>
                         </div>
                         <div class="work-grid-item work-2">
