--- a/index.html
+++ b/index.html
@@ -62,18 +62,18 @@
                 <div class="work-grid-wrapper section-border">
                     <div class="work-grid-container">
                         <div class="work-grid-item work-1" > 
+                            <a href="https://the-bookfast-club.herokuapp.com/" target="_blank">
+                                <img src="./assets/images/breakfast-club-screenshot.png" alt="">
+                            </a>
+                        </div>
+                        <div class="work-grid-item work-2">
                             <a href="https://clintonstrange.github.io/movie-hub/index.html" target="_blank">
                                 <img src="./assets/images/moviehub-demo-img.png" alt="">
                             </a>
                         </div>
-                        <div class="work-grid-item work-2">
+                        <div class="work-grid-item work-3">
                             <a href="https://beatypete.github.io/run-buddy/">
                                 <img src="./assets/images/work2.png" alt="">
-                            </a>
-                        </div>
-                        <div class="work-grid-item work-3">
-                            <a href="https://youtu.be/JDS4cQFPwoQ">
-                                <img src="./assets/images/work3.jpg" alt="">
                             </a>
                         </div>
                         <div class="work-grid-item work-4">
